--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "start": "npm start \"node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
